--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -80,19 +80,20 @@
 	- ต้องขอคืนอากรภายในกำหนดหกเดือนนับแต่วันที่ส่งของนั้นกลับออกไปนอกราชอาณาจักร
 2. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรยังมิได้มีการปล่อยออกไปจากอารักขาของศุลกากร 
 	- **ระบุ Re-Export  = Y ที่ส่วนรายการในใบขนสินค้าทุกรายการ**
-	- มีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ โดยให้ __ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท__ ต่อใบขนสินค้าขาเข้า
+	- มีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ โดยให้ **ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท** _ต่อใบขนสินค้าขาเข้า_
 	- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น
 	- ระบุ ==Tariff Code== = พิกัดอัตราศุลกากร==ให้ตรงกับชนิดของที่จะส่งกลับออกไป==
 	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
 4. ให้**จัดทำใบขนสินค้าขาเข้าก่อน**และนำ _เลขที่ใบขนสินค้าขาเข้าพร้อมรายการไปบันทึกไว้ใน
 ใบขนสินค้าขาออก_
 5. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักร  **_อยู่นอกอารักขาของศุลกากรแล้ว_** ให้ทำใบขนสินค้าขาเข้าปกติ และจัดทำใบขนสินค้าขาออกโดยระบุในแต่ละรายการที่ส่งออกเป็น Re-Export  และให้ระบุเลขที่ใบขนสินค้าขาเข้าพร้อมรายการ   แล้วไปดำเนินการขอคืนอากรในระบบคืนอากรทั่วไปเมื่อส่งออกเรียบร้อยแล้ว
-6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ **_ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า_**  **==เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น==**
+6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า  **==เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น==**
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk4Mjg1MjU1NywtMTkzMjg0MDc5LC0xMz
-E1MDk1NTY0LDE1MzIwNTU0MjYsMTE5Nzc5NTY2NCwtMTI0NDA4
-NDQzNiwxMjkyNzA1ODEwLDE5OTg5NjE0NDUsMTg0NzIxMDk1LC
-0xMjQzMDA2OTksMTI0NzU0MDc1NSwtMTM0MTcxMDQ0N119
+eyJoaXN0b3J5IjpbLTEwNjA2MTE0NjMsLTE5MzI4NDA3OSwtMT
+MxNTA5NTU2NCwxNTMyMDU1NDI2LDExOTc3OTU2NjQsLTEyNDQw
+ODQ0MzYsMTI5MjcwNTgxMCwxOTk4OTYxNDQ1LDE4NDcyMTA5NS
+wtMTI0MzAwNjk5LDEyNDc1NDA3NTUsLTEzNDE3MTA0NDddfQ==
+
 -->
