--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -32,7 +32,7 @@
 - อัตราอากร ใช้ Tariff Code และ Tariff Sequence
 - อากร ชำระตามปกติ
 - VAT ชำระตามปกติ
-- มูลค่าการนำเข้า  CIF = **ค่าซ่อม**
+- มูลค่าการนำเข้า  CIF = **==ค่าซ่อม==**
 - บันทึกเลขที่ใบขนสินค้าขาออกและรายการที่ของใบขนสินค้าขาออกที่อ้างถึง
 
 
@@ -46,9 +46,9 @@
 - อากร ยกเว้น (บันทึก Exemption Rate = 100%)
 - VAT ยกเว้น (บันทึก Exemption Rate = 100%)
 
-การกำหนดค่าวางเงินประกัน **(วางประกันที่ด่านศุลกากร ไม่ต้องบันทึกในโปรแกรม)**
+การกำหนดค่าวางเงินประกัน **==(วางประกันที่ด่านศุลกากร ไม่ต้องบันทึกในโปรแกรม)==**
 
-- **ให้วางเป็นสัญญาประกันทัณฑ์บนเพื่อการปฏิบัติพิธีการ** 
+- **_ให้วางเป็นสัญญาประกันทัณฑ์บนเพื่อการปฏิบัติพิธีการ_** 
 - คำนวณจาก ค่าภาษีอากรอันพึงจะต้องชำระตามปกติ แล้วคำนวณเงินเพิ่มอีกร้อยละ 20 ของเงินภาษีอากรที่ได้ประเมินไว้ และรวมกำหนดเป็นเงินประกัน 
 
 ให้ยื่นคำร้องต่อหน่วยงานศุลกากร **ณ ด่านศุลกากร ที่นำของเข้า** โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภทที่ 3 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการนำของที่นำเข้ามาเป็นการชั่วคราว และจะต้องแสดงหลักฐานให้เป็นที่พอใจว่า นำเข้ามาใช้ประโยชน์ในกิจการตามที่ระบุไว้ ตามพิกัดอัตราศุลกากรแต่ละประเภท
@@ -66,7 +66,7 @@
 
 ## สิทธิของใช้ส่วนตัว (ของส่วนตัว) ประเภทที่ 5 ภาค 4 
 
-ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **เว้นแต่ รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง**
+ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **==เว้นแต่ รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง**
 
 **สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น** ซึ่งเป็นของส่วนตัวที่ผู้เดินทางนำเข้ามาพร้อมกับตนนั้น ยกเว้นอากรให้ได้ แต่ต้องไม่เกินปริมาณ ดังนี้
 
@@ -293,8 +293,8 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTMxNjIyNjAsMjYxNjAyNDc4LDE5MT
-IzOTIwNDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0
-OTk0LC0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX
-0=
+eyJoaXN0b3J5IjpbMTAwODIxMTE0MCwyNjE2MDI0NzgsMTkxMj
+M5MjA0NiwtNDI1MTMxNjYyLC0yNzI0MDY3MjAsLTIwOTQzMzQ5
+OTQsLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MTAyMTMxNTFdfQ
+==
 -->
